# fatcat-server

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cicd.yml
fatcat_server/: __init__.py  __main__.py  exceptions.py  server.py
